testing/framework/resources/Functional/Failing/information-schema/m7/columns-m7-count1.q
SELECT COUNT(*) FROM INFORMATION_SCHEMA.COLUMNS WHERE TABLE_SCHEMA='hbase' AND TABLE_NAME='m7-students'
